; ModuleID = '/home/carl/AnghaBench/stb/tests/caveview/extr_cave_parse.c_open_file.c'
source_filename = "/home/carl/AnghaBench/stb/tests/caveview/extr_cave_parse.c_open_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@opened = common dso_local global i32 0, align 4
@last_region_x = common dso_local global i32 0, align 4
@last_region_z = common dso_local global i32 0, align 4
@last_region = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [12 x i8] c"r.%d.%d.mca\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"rb\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @open_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @open_file(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca [256 x i8], align 16
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @opened, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %16

8:                                                ; preds = %2
  %9 = load i32, i32* @last_region_x, align 4
  %10 = load i32, i32* %3, align 4
  %11 = icmp ne i32 %9, %10
  br i1 %11, label %16, label %12

12:                                               ; preds = %8
  %13 = load i32, i32* @last_region_z, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %13, %14
  br i1 %15, label %16, label %31

16:                                               ; preds = %12, %8, %2
  %17 = load i32*, i32** @last_region, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %22

19:                                               ; preds = %16
  %20 = load i32*, i32** @last_region, align 8
  %21 = call i32 @fclose(i32* %20)
  br label %22

22:                                               ; preds = %19, %16
  %23 = getelementptr inbounds [256 x i8], [256 x i8]* %5, i64 0, i64 0
  %24 = load i32, i32* %3, align 4
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @sprintf(i8* %23, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %24, i32 %25)
  %27 = getelementptr inbounds [256 x i8], [256 x i8]* %5, i64 0, i64 0
  %28 = call i32* @fopen(i8* %27, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  store i32* %28, i32** @last_region, align 8
  %29 = load i32, i32* %3, align 4
  store i32 %29, i32* @last_region_x, align 4
  %30 = load i32, i32* %4, align 4
  store i32 %30, i32* @last_region_z, align 4
  store i32 1, i32* @opened, align 4
  br label %31

31:                                               ; preds = %22, %12
  ret void
}

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32, i32) #1

declare dso_local i32* @fopen(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
